@@ -9,6 +9,7 @@ release 0.14.5
 	* fixed bug in rename_file(). The new name would not always be saved in
 	  the resume data
 	* fixed resume data compatibility with 0.13
+	* fixed rare piece-picker bug
 
 release 0.14.4
 
